--- a/index.html
+++ b/index.html
@@ -2,18 +2,15 @@
 <html lang="en">
 <head>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8">
-	<meta name="keywords" content="">
 	<meta name="description" content="">
-	<title>zmovo</title>
+	<title>Zm</title>
 	<link rel="shortcut icon" type="image/x-icon" href="img/my.ico" />
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="./css/themes.css">
 	<link rel="stylesheet" type="text/css" href="./css/wzlb.css">
-	<link rel="stylesheet" href="./css/calendar.css" />
 	<!-- 引入js -->
 	<script type="text/javascript" src="./js/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" src="./js/layout.js"></script>
-	<script type="text/javascript" src="./js/calendar.js"></script>
 	<!--viewport的meta标签，修正网页在移动设备中的显示-->
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<!--响应式布局css-->
@@ -21,68 +18,72 @@
 	<!--如果浏览器不支持HTML5(也可以用modernizer)，执行下面的代码-->
 	<!--[if lt IE 9]>
 	  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
+	<![endif]F7F7F7-->
 </head>
-<body style="background:#F7F7F7">
-<div class="container-fluid">
- 	<div class="yusi-logo" style="background-color:#94A07C;">
-	    <a href="/">
-		    <h1>
-				 <span class="yusi-mono">zmovo</span>
-				 <span class="yusi-bloger"></span>
-		 	</h1>
-	    </a>
-    </div>
-</div>
-<div class="container-fluid">
-	<!--body部分-->
-	<div class="row-fluid" id="divide">
-	    <!--文章列表-->
-		<div class="span9">
-			<div class="artical">
-				<!-- Post Title -->
-				<h3><a href="#"></a></h3>
-				<!-- Post Data -->
-				<div>
-					<!-- Post Image -->
-					<a href="single.html">
-						<img class="img-rounded" alt="缩略图" src="img/01.jpg" />
-					</a>
-					<!-- Post Content -->
-					<span class="postcontent">
-	如果能有一块空地，不论窗前屋后，我想种两棵树：一棵合欢，纪念母亲；一棵海棠，纪念奶奶。
-　　奶奶和一棵老海棠树，在我的记忆里不能分开，因为奶奶一生一世都在那棵老海棠树的影子里张望。
-　　老海棠树近房高的地方，有两条粗壮的枝丫，弯曲如一把躺椅。儿时我常爬上去，一天天地在那儿玩，奶奶在树下喊：“下来吧，你就这么一天到晚待在上头?”是的，我在那儿看小人书、射弹弓，甚至写作业。“饭也在上头吃?”她又问。“对，在上头吃。”奶奶把盛好的饭菜举过头顶，我两腿攀紧树丫，一个海底捞月把碗筷接上来。“觉呢，也在上头睡?”“没错，四周都是花香呢。”奶奶只是站在地上，站在老海棠树下，望着我。她必然是羡慕，猜我在上头都能看见什么。
-　　春天，老海棠树摇动满树繁花，摇落一地雪似的花瓣。奶奶坐在树下糊纸袋，不时地冲我唠叨：“就不说下来帮帮?你那小手儿糊得多快!”我在树上胡乱地唱歌。奶奶又说：“我求过你吗?这回活儿紧!”我说：“有我爸妈养着您，您干吗这么累啊?”奶奶不再吭声，直起腰，喘口气。
-　　夏天，老海棠树枝繁叶茂，奶奶坐在树下的浓荫里，又不知从哪里找来了补花的活儿，戴着老花镜，一针一线地缝。天色暗下来时她冲我喊：“你就不能去洗洗菜?没见我忙不过来吗?”我跳下树，洗菜，胡乱一洗了事。奶奶生气了：“你上学也这么糊弄?”奶奶把手里的活儿推开，一边重新洗菜，一边说：“我就一辈子得给你们做饭?就不能有我自己的工作?”我不敢吭声。奶奶洗好菜重新捡起针线，或者从老花镜上缘抬起目光，或者又会有一阵子愣愣地张望。
-　　有年秋天，老海棠树照旧落叶纷纷。天还没亮，奶奶就起来主动扫院子，“刷拉——刷拉——”邻居都还在梦中，那时候她已经腰弯背驼。我大些了，听到声音赶紧跑出去说：“您歇着吧，我来，保证用不了3分钟。”可这回奶奶不要我帮：“咳，你呀!还不懂吗?我得劳动。”我说：“可谁能看见?”奶奶说：“不能那样，看不看得见是人家的事，我得自觉。”她扫完院子又去扫街了。
-　　我这才明白，曾经她为什么执意要糊纸袋、补花，不让自己闲着。她不是为挣钱，她为的是劳动。什么时候她才能像爸和妈那样，有一份工作呢?大概这就是她的张望吧。不过，这张望或许还要更远大些——她说过：“得跟上时代。”
-　　所以在我的记忆里，几乎每一个冬天的晚上，奶奶都在灯下学习。窗外，风中，老海棠树枯干的枝条敲打着屋檐，摩擦着窗棂。一次，奶奶举着一张报纸小心地凑到我的跟前：“这一段，你说说，到底是什么意思?”我不耐烦地说：“您学那玩意儿有用吗?就算都看懂了您就有文化了?”奶奶立刻不语，只低头盯着那张报纸，半天目光都不移动。我的心一下子收紧，但知已无法弥补。“奶奶。”“奶奶!”“奶奶——”她终于抬起头，眼里竟全是惭愧，毫无对我的责备。
-　　但在我的记忆里，奶奶的目光慢慢地离开那张报纸，离开灯光，离开我，在窗上老海棠树的影子那儿停留一下，继续离开，离开一切声响，飘进黑夜，飘过星光，飘向无可慰藉的迷茫……而在我的梦里，我的祈祷中，老海棠树也随之轰然飘去，跟随着奶奶，陪伴着她；奶奶坐在满树的繁花中，满地的浓荫里，张望复张望，或不断地要我给她说说这一段到底是什么意思。这形象，逐年地定格成我的思念，和我永生的痛悔。
-					</span>
-				</div>
-				<!-- Read More Button -->
-				<p style="text-align:right;padding-top:10px">
-					<a href="#" class="btn">更多</a>
-				</p>
-			</div>
-			
-		</div>
-
-		<!--右边Sidebar-->
-		<div class="span3">
-			<div class="span12 shadow" style="margin-top:10px;margin-left:0;">
-				<h3 style="background-color:#AAA0A0;margin-top:0px;">近期文章</h3>
-				<ul style="margin-left:-40px">	
-					<p><a href="#">JQuery和Bootstrap简介1</a></p>
-					<p><a href="#">JQuery和Bootstrap简介2</a></p>
-					<p><a href="#">JQuery和Bootstrap简介3</a></p>
-					<p><a href="#">JQuery和Bootstrap简介4</a></p>
-				</ul>
-			</div>
-		<!-- end -->
+<body style="background:#222222">
+	<div class="container-fluid">
+	 	<div class="yusi-logo" style="background-color:#222222;">
+		    <a href="/">
+			    <h1><span class="yusi-mono" style="color:#9D9D9D">zmovo</span></h1>
+		    </a>
+	    </div>
 	</div>
-</div>
+
+	<div class="container-fluid">
+		<!--body部分-->
+		<div class="row-fluid" id="divide">
+		    <!--文章列表-->
+		    <div class="span2"></div>
+			<div class="span8">
+				<!-- 文一 -->
+				<div class="artical">
+					<!-- Post Data -->
+					<div>
+						<!-- Post Image -->
+						<a href="article/01_haitang.html"><img class="img-rounded" alt="缩略图" src="img/01.png" /></a>
+						<h3><a href="article/01_haitang.html" style="color:#272822">老海棠树</a></h3>
+						<!-- Post Content -->
+						<span class="postcontent">
+		如果能有一块空地，不论窗前屋后，我想种两棵树：一棵合欢，纪念母亲；一棵海棠，纪念奶奶。奶奶和一棵老海棠树，在我的记忆里不能分开，因为奶奶一生一世都在那棵老海棠树的影子里张望。老海棠树近房高的地方，有两条粗壮的枝丫，弯曲如一把躺椅。儿时我常爬上去，一天天地在那儿玩，奶奶在树下喊：“下来吧，你就这么一天到晚待在上头?”是的，我在那儿看小人书、射弹弓，甚至写作业......
+						</span>
+						<div>
+							<!-- Read More Button -->
+							<p style="text-align:right;">
+								<a href="article/01_haitang.html" class="btn">更多</a>
+							</p>
+						</div>
+					</div>
+				</div>
+				<!-- end -->
+
+				<!-- 文二 -->
+				<div class="artical">
+					<!-- Post Data -->
+					<div>
+						<!-- Post Image -->
+						<a href="article/02_zhongsheng.html"><img class="img-rounded" alt="缩略图" src="img/02.jpg" /></a>
+						<h3><a href="article/02_zhongsheng.html" style="color:#272822">消逝的钟声</a></h3>
+						<!-- Post Content -->
+						<span class="postcontent">
+		在台阶上张望那条小街的时候，我大约两岁多。我记事早。我记事早的一个标记，是斯大林的死。有一天父亲把一个黑色镜框挂在墙上，奶奶抱着我走近看，说：斯大林死了。镜框中是一个陌生的老头儿，突出的特点是胡子都集中在上唇。在奶奶的涿州口音中，“斯”读三声。我心想，既如此还有什么好说，这个“大林”当然是死的呀？我不断重复奶奶的话，把“斯”读成三声，觉得有趣，觉得别人竟然都没有发现这一点可真是奇怪......
+						</span>
+						<div>
+							<!-- Read More Button -->
+							<p style="text-align:right;">
+								<a href="article/02_zhongsheng.html" class="btn">更多</a>
+							</p>
+						</div>
+					</div>
+				</div>
+				<!-- end -->
+
+			</div>
+
+
+
+		</div>
+	</div>
+
 <!--引入bootstrap.js-->
 <script type="text/javascript" src="./js/bootstrap.min.js"></script>
 <script type="text/javascript" src="./js/bootstrap-dropdown.js"></script>
