--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body style="background:#222222">
 	<div class="container-fluid">
 	 	<div class="yusi-logo" style="background-color:#222222;">
-		    <a href="/">
+		    <a href="#">
 			    <h1><span class="yusi-mono" style="color:#9D9D9D">zmovo</span></h1>
 		    </a>
 	    </div>
